<resources>
    <string name="app_name">Newtone</string>
    <string name="tab_artists">Artists</string>
    <string name="tab_albums">Albums</string>
    <string name="tab_tracks">Tracks</string>
    <string name="tab_playlists">Playlists</string>
    <string name="tab_playlists_my_playlists">My playlists</string>
    <string name="request_permission_button">Request</string>
    <string name="request_permission_desc">App needs storage permission to access media</string>
    <string name="request_permission_toast">Grant storage access in \"Permissions\" menu</string>
    <string name="playlist_favourites">Favourites</string>
    <string name="playlist_recently_added">Recently Added</string>
    <string name="playlist_queue">Queue</string>
    <string name="playlist_folders">Folders</string>
    <string name="album_cover_desc">Album Cover</string>
    <string name="album_screen_album_load_error_toast">Failed to load album</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="unknown_album">Unknown Album</string>
    <string name="menu_search">Search</string>
    <string name="menu_sorting_by">Sorting</string>
    <string name="menu_add_playlist">Create playlist</string>
    <string name="menu_settings">Settings</string>
    <string name="artist_menu_shuffle">Shuffle</string>
    <string name="artist_menu_add_to_playlist">Add to playlist</string>
    <string name="album_menu_title">%s — %s</string>
    <string name="album_menu_shuffle">Shuffle</string>
    <string name="album_menu_add_to_playlist">Add to playlist</string>
    <string name="track_menu_title">%s — %s</string>
    <string name="track_menu_play">Play</string>
    <string name="track_menu_add_to_favourites">Favourite</string>
    <string name="track_menu_remove_from_favourites">Not favourite</string>
    <string name="track_menu_add_to_playlist">Add to playlist</string>
    <string name="track_menu_remove_from_playlist">Remove from playlist</string>
    <string name="track_menu_share_track">Share</string>
    <string name="track_menu_additional_info">Additional info</string>
    <string name="track_menu_share_track_intent_title">Share audio file</string>
    <string name="track_menu_delete">Delete</string>
    <string name="track_menu_delete_dialog_title">Delete track?</string>
    <string name="track_menu_delete_dialog_message">This track will be deleted from the storage</string>
    <string name="tab_track_menu_title">All tracks</string>
    <string name="tab_track_menu_shuffle_all">Shuffle all</string>
    <string name="tab_track_menu_excluded_folders">Excluded folders</string>
    <string name="playlist_menu_rename">Rename</string>
    <string name="playlist_menu_shuffle">Shuffle</string>
    <string name="playlist_menu_delete">Delete</string>
    <string name="folder_menu_shuffle">Shuffle</string>
    <string name="folder_menu_add_to_playlist">Add to playlist</string>
    <string name="folder_menu_exclude_folder">Exclude folder</string>
    <string name="folder_menu_exclude_folder_dialog_title">Exclude folder %s?</string>
    <string name="folder_menu_exclude_folder_dialog_desc">The folder \'%s\' will be added to exclude list</string>
    <string name="player_menu_add_to_playlist">Add to playlist</string>
    <string name="player_menu_timer">Timer</string>
    <string name="player_menu_lyrics">Lyrics</string>
    <string name="player_menu_share">Share</string>
    <string name="player_menu_additional_info">Additional info</string>
    <string name="player_menu_delete">Delete</string>
    <string name="player_menu_settings">Settings</string>
    <string name="sort_title">Sorting</string>
    <string name="sort_reverse">Reverse</string>
    <string-array name="sort_tracks">
        <item>By title</item>
        <item>By artist</item>
        <item>By duration</item>
        <item>By adding date</item>
        <item>By position in album</item>
    </string-array>
    <string-array name="sort_albums">
        <item>By title</item>
        <item>By artist</item>
        <item>By year</item>
    </string-array>
    <string-array name="sort_artists">
        <item>By title</item>
        <item>By tracks count</item>
    </string-array>
    <string name="all_artist_tracks">All tracks</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_create">Create</string>
    <string name="dialog_rename">Rename</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_reset">Reset</string>
    <string name="dialog_exclude">Exclude</string>
    <string name="create_playlist_title">Create new playlist</string>
    <string name="error_playlist_title_is_empty">Playlist name can not be empty</string>
    <string name="toast_playlist_already_exist">Playlist with same name already exists</string>
    <string name="toast_playlist_created" formatted="true">Playlist \"%1$s\" created</string>
    <string name="rename_playlist_title">Rename playlist</string>
    <string name="rename_toast_playlist_already_exist">Playlist with same name already exists</string>
    <string name="delete_playlist_title">Delete playlist?</string>
    <string name="delete_playlist_desc">The list will be deleted</string>
    <string name="sleep_timer_dialog_title">Sleep timer</string>
    <string name="toast_sleep_timer_already_launched">Sleep timer already launched</string>
    <string name="toast_sleep_timer_on_start">Sleep timer ends in %1$s</string>
    <string-array name="sleep_timer_values">
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>1 hour</item>
    </string-array>
    <string name="title_sleep_info_dialog">Timer Info</string>
    <string name="time_to_end_sleep_info_dialog">Timer ends in %1$s</string>
    <string name="choose_playlist_dialog_title">Select playlist</string>
    <string name="choose_playlist_dialog_create_playlist">Create new playlist</string>
    <string name="equalizer">Equalizer</string>
    <string name="preset_selector_dialog_title">Presets</string>
    <string name="fx_tempo">Tempo x%.2f</string>
    <string name="fx_pitch">Pitch x%.2f</string>
    <string name="fx_bassBoost">Bass boost</string>
    <string name="fx_virtualizer">Virtualizer</string>
    <string name="track_add_info_artist">Artist</string>
    <string name="track_add_info_album">Album</string>
    <string name="track_add_info_album_position">Position</string>
    <string name="track_add_info_title">Title</string>
    <string name="track_add_info_genre">Genre</string>
    <string name="track_add_info_duration">Duration</string>
    <string name="track_add_info_year">Year</string>
    <string name="track_add_info_fileSize">Size</string>
    <string name="track_add_info_bitrate">Bitrate</string>
    <string name="track_add_info_sample_rate">Sample rate</string>
    <string name="track_add_info_filepath">Filepath</string>
    <string name="track_add_info_file_size_format">%d kB</string>
    <string name="track_add_info_bitrate_format">%d kbps</string>
    <string name="track_add_info_sample_rate_format">%d Hz</string>
    <string name="search_bar_title">Search</string>
    <string name="search_screen_artists_group">Artists</string>
    <string name="search_screen_albums_group">Albums</string>
    <string name="search_screen_tracks_group">Tracks</string>
    <string name="search_screen_playlists_group">Playlists</string>
    <string name="default_track_title">21 Century Schizoid Man</string>
    <string name="default_album">In the Court of the Crimson King</string>
    <string name="default_artist">King Crimson</string>
    <string name="default_duration">7:20</string>
    <string name="default_album_tracks_count">5 tracks</string>
    <string name="default_artist_info">13 albums, 58 tracks</string>
    <string name="setting_title">Settings</string>
    <string name="setting_color_theme_title">Color theme</string>
    <string name="setting_color_theme_desc_dark">Dark</string>
    <string name="setting_color_theme_desc_light">Light</string>
    <string name="setting_notification_block_title">Notification</string>
    <string name="setting_notification_color_title">Notification color</string>
    <string name="setting_notification_color_desc">Change color depending on the cover</string>
    <string name="setting_notification_artwork_show_title">Notification artwork</string>
    <string name="setting_notification_artwork_show_desc">Show album artwork in notification</string>
    <string name="setting_list_block_title">Lists</string>
    <string name="setting_show_item_divider_title">Dividers in lists</string>
    <string name="setting_excluded_folders_title">Excluded folders</string>
    <string name="setting_show_item_divider_desc">Show dividers between items in lists of tracks, albums, artists etc…</string>
    <string name="setting_info_block_title">Info</string>
    <string name="setting_privacy_policy_title">Privacy policy</string>
    <string name="setting_contact_developers_title">Contact developer</string>
    <string name="setting_contact_developers_intent_title">Send email</string>
    <string name="reset_to_default_button">Reset to default</string>
    <string name="reset_settings_dialog_title">Reset settings</string>
    <string name="setting_ui_mode_block">UI mode</string>
    <string name="setting_primary_color_block">Primary color</string>
    <string name="track_item_display_setting_screen_title">Track view settings</string>
    <string name="track_item_text_size_setting">Text size</string>
    <string name="track_item_border_padding_setting">Border padding</string>
    <string name="track_item_show_album_title_setting">Show album title</string>
    <string name="track_item_show_cover_setting">Show cover</string>
    <string name="track_item_cover_size_setting">Cover size</string>
    <string name="track_item_cover_corners_setting">Cover corners</string>
    <string name="track_item_reset_settings_dialog_message">Are you sure you want to reset track item settings?</string>
    <string name="track_item_artist_with_album">%s — %s</string>
    <string name="album_item_display_setting_screen_title">Album view settings</string>
    <string name="album_item_grid_view_type_setting">Grid</string>
    <string name="album_item_list_view_type_setting">List</string>
    <string name="album_item_text_size_setting">Text size</string>
    <string name="album_item_border_padding_setting">Border padding</string>
    <string name="album_item_cover_size_setting">Cover size</string>
    <string name="album_item_cover_corners_setting">Cover corners</string>
    <string name="album_item_reset_settings_dialog_message">Are you sure you want to reset album item settings?</string>
    <string name="artist_item_display_setting_screen_title">Artist view settings</string>
    <string name="artist_item_text_size_setting">Text size</string>
    <string name="artist_item_border_padding_setting">Border padding</string>
    <string name="artist_item_reset_settings_dialog_message">Are you sure you want to reset artist item settings?</string>
    <string name="artist_item_addition_info">%s, %s</string>
    <string name="file_deleted_successfully_toast">File deleted</string>
    <string name="file_not_deleted_toast">Failed to delete file</string>
    <string name="back_btn_content_desc">Back</string>
    <string name="track_item_burger_content_desc">Move track</string>
    <string name="player_toggle_content_desc">Play/pause playback</string>
    <string name="main_menu_button_content_desc">Main menu</string>
    <string name="artists_list_content_desc">Artists list</string>
    <string name="albums_list_content_desc">Albums list</string>
    <string name="tracks_list_content_desc">Tracks list</string>
    <string name="folders_list_content_desc">Folders list</string>
</resources>