<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/add_to_playlist"
        android:icon="@drawable/ic_add_playlist"
        android:title="@string/player_menu_add_to_playlist" />

    <item
        android:id="@+id/lyrics"
        android:icon="@drawable/ic_lyrics"
        android:title="@string/player_menu_lyrics" />

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share"
        android:title="@string/player_menu_share" />

    <item
        android:id="@+id/additional_info"
        android:icon="@drawable/ic_info"
        android:title="@string/player_menu_additional_info" />

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/player_menu_delete" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_setting"
        android:title="@string/player_menu_settings" />

</menu>
