<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.settings.SettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <FrameLayout
            android:id="@+id/color_theme_bar"
            style="@style/SettingItemContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/color_theme_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/setting_color_theme_title"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp" />
        </FrameLayout>


        <FrameLayout
            style="@style/SettingBlockTitleContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SettingBlockTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_notification_block_title" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/notification_artwork_show_bar"
            style="@style/SettingItemContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/setting_notification_artwork_show_title"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/setting_notification_artwork_show_desc"
                    android:textSize="13sp" />
            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/notification_artwork_show_switch"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:clickable="false" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/notification_color_bar"
            style="@style/SettingItemContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:duplicateParentState="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:duplicateParentState="true"
                    android:text="@string/setting_notification_color_title"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:duplicateParentState="true"
                    android:text="@string/setting_notification_color_desc"
                    android:textSize="13sp" />
            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/notification_color_switch"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:clickable="false"
                android:duplicateParentState="true" />
        </LinearLayout>


        <FrameLayout
            style="@style/SettingBlockTitleContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SettingBlockTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_list_block_title" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/show_item_divider_bar"
            style="@style/SettingItemContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_show_item_divider_title"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_show_item_divider_desc"
                    android:textSize="13sp" />
            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/show_item_divider_switch"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:clickable="false" />
        </LinearLayout>


        <FrameLayout
            android:id="@+id/excluded_folders_bar"
            style="@style/SettingItemContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/setting_excluded_folders_title"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/track_item_view_bar"
            style="@style/SettingItemContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/track_item_display_setting_screen_title"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/album_item_view_bar"
            style="@style/SettingItemContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/album_item_display_setting_screen_title"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/artist_item_view_bar"
            style="@style/SettingItemContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/artist_item_display_setting_screen_title"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp" />

        </FrameLayout>


        <FrameLayout
            style="@style/SettingBlockTitleContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SettingBlockTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_info_block_title" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/privacy_policy_bar"
            style="@style/SettingItemContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/setting_privacy_policy_title"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/contact_developers_bar"
            style="@style/SettingItemContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/setting_contact_developers_title"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/app_info_bar"
            style="@style/SettingItemContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/app_info_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/app_info_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="v.0.0.1. Build-1" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
