<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:minWidth="@dimen/alert_dialog_min_width"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingVertical="16dp"
    tools:context=".ui.dialog.TimeToSleepInfoDialog">

    <TextView
        style="@style/RtlOverlay.DialogWindowTitle.AppCompat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_sleep_info_dialog" />

    <TextView
        android:id="@+id/time_to_end_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        tools:text="Time to end: 3:45" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel"
            style="@style/TextViewDialogAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_cancel" />

        <TextView
            android:id="@+id/reset"
            style="@style/TextViewDialogAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_reset" />

    </LinearLayout>

</LinearLayout>
