<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingTop="16dp"
    android:paddingRight="24dp"
    android:paddingBottom="8dp"
    tools:context=".ui.dialog.RenamePlaylistDialog">

    <TextView
        style="@style/RtlOverlay.DialogWindowTitle.AppCompat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/rename_playlist_title" />

    <EditText
        android:id="@+id/playlist_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:minHeight="48dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true"
        tools:ignore="LabelFor">

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel"
            style="@style/TextViewDialogAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/dialog_cancel" />

        <TextView
            android:id="@+id/ok"
            style="@style/TextViewDialogAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_rename" />

    </LinearLayout>
</LinearLayout>